# 42-School

./: .gitignore  CMakeLists.txt  LICENSE
C Piscine/C00/ex02/: ft_print_reverse_alphabet.c
C Piscine/C01/ex05/: ft_putstr.c
C Piscine/C01/ex06/: ft_strlen.c
C Piscine/C01/ex08/: ft_sort_int_tab.c
C Piscine/C02/ex00/: ft_strcpy.c
C Piscine/C02/ex01/: ft_strncpy.c
C Piscine/C02/ex05/: ft_str_is_uppercase.c
C Piscine/C02/ex06/: ft_str_is_printable.c
C Piscine/C03/ex00/: ft_strcmp.c
C Piscine/Rush00/: ft_putchar.c  rush01.c  rush03.c  rush04.c
C Piscine/Rush01/: ft_check_input.c  ft_putstr.c  up_to_down.c
C00/: main.c
C00/ex00/: ft_putchar.c
C00/ex01/: ft_print_alphabet.c
C00/ex02/: ft_print_reverse_alphabet.c
C00/ex03/: ft_print_numbers.c
C00/ex04/: ft_is_negative.c
C00/ex05/: ft_print_comb.c
C00/ex06/: ft_print_comb2.c
C00/ex07/: ft_putnbr.c
C00/ex08/: ft_print_combn.c
C01/ex00/: ft_ft.c  main.c
C01/ex01/: ft_ultimate_ft.c
C01/ex02/: ft_swap.c
C01/ex03/: ft_div_mod.c
C01/ex04/: ft_ultimate_div_mod.c
C01/ex08/: ft_sort_int_tab.c
C02/ex00/: ft_strcpy.c
C02/ex01/: ft_strncpy.c
C02/ex02/: ft_str_is_alpha.c
C02/ex03/: ft_str_is_numeric.c
C02/ex04/: ft_str_is_lowercase.c
C02/ex05/: ft_str_is_uppercase.c
C02/ex06/: ft_str_is_printable.c
C02/ex07/: ft_strupcase.c
C02/ex08/: ft_strlowcase.c
C02/ex10/: ft_strlcpy.c
C03/ex00/: ft_strcmp.c
C03/ex01/: ft_strncmp.c
C03/ex02/: ft_strcat.c
C03/ex03/: ft_strncat.c
C03/ex04/: ft_strstr.c
C03/ex05/: ft_strlcat.c
C04/ex01/: ft_putstr.c
C04/ex02/: ft_putnbr.c
C04/ex04/: ft_putnbr_base.c
C04/ex05/: ft_atoi_base.c
C05/ex00/: ft_iterative_factorial.c
C05/ex02/: ft_iterative_power.c
C05/ex03/: ft_recursive_power.c
C05/ex04/: ft_fibonacci.c
C05/ex05/: ft_sqrt.c
C05/ex06/: ft_is_prime.c
C05/ex07/: ft_find_next_prime.c
C05/ex08/: ft_ten_queens_puzzle.c
C06/ex00/: ft_print_program_name.c
C06/ex01/: ft_print_params.c
C06/ex02/: ft_rev_params.c
C06/ex03/: ft_sort_params.c
C07/ex00/: ft_strdup.c
C07/ex01/: ft_range.c
C07/ex02/: ft_ultimate_range.c
C07/ex03/: ft_strjoin.c
C08/ex00/: ft.h
C08/ex01/: ft_boolean.h
C08/ex02/: ft_abs.h
C08/ex03/: ft_point.h
C08/ex04/: a.out  ft_stock_str.h  ft_strs_to_tab.c  main.c  mda.c
C08/ex05/: ft_show_tab.c
C09/ex00/: ft_strlen.c  ft_swap.c  libft_creator.sh
C09/ex01/: Makefile
C09/ex02/: ft_split.c
Core Education/: Makefile
Core Education/includes/: ft_atoi.c  ft_calloc.c  ft_isalpha.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strnstr.c  ft_substr.c
Core Education/libft/: Makefile  ft_isascii.c  ft_lstclear.c  ft_lstnew.c  ft_lstsize.c  ft_memcmp.c  ft_memset.c  ft_putendl_fd.c  ft_striteri.c  ft_strmapi.c
Rush00/: main.c  rush00.c  rush02.c  rush03.c
Rush01/: check_array.c  check_columns.c  conversion.c  down_to_up.c  ft_putnbr.c  ft_putstr.c  ft_rush.c  left_to_right.c  main.c  print_matrix.c  right_to_left.c
Shell01/ex06/: skip.sh
c_piscine/Rush01/: check_matrix.c  ft_putchar.c  ft_rush.c  ft_strlen.c  main.c  update_row.c
ex00/: check_1s.c  conversion.c  ft_check_input.c  ft_putnbr.c  ft_rush.c  input_to_matrix.c  main.c  update_imp.c
(+455 files in other folders)
